# ScoreFollowing-v3

./: .gitignore  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  EvaluateSfResult.cpp  EvaluateSfResult.h  ProcessNMF.cpp  ProcessNMF.h  README.md  ScoreFollowing.cpp  ScoreFollowing.h  findPath.cpp  findPath.h  main.cpp  matchEvent.cpp  matchEvent.h  midiToEvent.cpp  midiToEvent.h  readData.cpp  readData.h  scoreFollowingEvent.cpp  scoreFollowingEvent.h
